Layout: fix title gap height

--- a/src/assets/scss/_spotlight.scss
+++ b/src/assets/scss/_spotlight.scss
@@ -28,6 +28,7 @@
     h1 {
       color: $title;
       font-size: 48px;
+      margin-bottom: 24px;
     }
 
     p {
